Learned about AOP in spring boot, all the advices in spring boot as well as learned about the concept of logging in spring boot, logging in console and logging into file

--- a/AOP-demo/pom.xml
+++ b/AOP-demo/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.2</version>
+		<version>3.3.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.rohan</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>com.aop</groupId>
+	<artifactId>AOP-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>AOP-demo</name>
+	<description>AOP Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -34,12 +34,26 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+
 	</dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -48,4 +62,5 @@
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
