--- a/Transaction-Demo/src/main/resources/application.properties
+++ b/Transaction-Demo/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+
+spring.mail.host=smtp.ethereal.email
+spring.mail.port=587
+spring.mail.username=barry.weber94@ethereal.email
+spring.mail.password=RjDa5YFy3JXn3mYm3x
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.starttls.enabled=true
