--- a/Database-Connection-with-MySQL/src/main/resources/application.properties
+++ b/Database-Connection-with-MySQL/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=Database-Connection-with-MySQL
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3307/mysqlbookdb
-spring.datasource.username=root
-spring.datasource.password=rohan123
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3307}/mysqlbookdb
+spring.datasource.username=${MYSQL_USERNAME:root}
+spring.datasource.password=${MYSQL_PASSWORD:rohan123}
 spring.jpa.hibernate.ddl_auto=update
 spring.jpa.show-sql=true
 
