--- a/springbootdocker/Dockerfile
+++ b/springbootdocker/Dockerfile
@@ -1,5 +1,5 @@
-FROM openjdk:22
-WORKDIR /usr/src/app
-COPY . /usr/src/app
-EXPOSE 9595
-CMD [ "java" , "-jar" , "ConsumingRestAPI-0.0.1-SNAPSHOT.jar" ]
+# FROM openjdk:22
+# WORKDIR /usr/src/app
+# COPY . /usr/src/app
+# EXPOSE 9595
+# CMD [ "java" , "-jar" , "ConsumingRestAPI-0.0.1-SNAPSHOT.jar" ]
